--- a/phpBB/3.0RC1/language/zh_TW/email/installed.txt
+++ b/phpBB/3.0RC1/language/zh_TW/email/installed.txt
@@ -10,11 +10,11 @@ Subject: phpBB 安裝成功
 帳號：{USERNAME}
 密碼：{PASSWORD}
 
-討論區地址：{U_BOARD}
+討論區位址：{U_BOARD}
 ----------------------------
 
 您可以在安裝目錄的「docs」資料夾，以及phpBB.com的支援頁面「http://www.phpbb.com/support/」找到一些有用的資訊。
 
-為了保障您的討論區安全穩定，我們強烈建議您訂閱郵件列表以便隨時獲得最新的發佈消息，地址以下：
+為了保障您的討論區安全穩定，我們強烈建議您訂閱郵件列表以便隨時獲得最新的發佈消息，位址以下：
 
 {EMAIL_SIG}
