--- a/phpBB/3.0RC1/language/zh_TW/email/admin_send_email.txt
+++ b/phpBB/3.0RC1/language/zh_TW/email/admin_send_email.txt
@@ -1,5 +1,5 @@
 
-以下是由 "{SITENAME}" 的管理員發送給您的email. 如果這個郵件是垃圾郵件, 或包含非法內容請聯繫該討論區的管理員, 聯繫地址:
+以下是由 "{SITENAME}" 的管理員發送給您的email. 如果這個郵件是垃圾郵件, 或包含非法內容請聯繫該討論區的管理員, 聯繫位址:
 
 {CONTACT_EMAIL}
 
