--- a/xoops/modules/lang_tool/CHANGELOG
+++ b/xoops/modules/lang_tool/CHANGELOG
@@ -1,3 +1,5 @@
+0.081   --- 12/27/2010
+Fix a bug in parseLangFile() found in previous release
 0.08   --- 12/27/2010
 Change the way to parse language files. (from preg_* to simpler string manipulations)
 0.0761 --- 11/16/2007
